--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/pizza.html">Mushroom & Herb Pizza</a>
-    <img src="images/mushroompizza.jpg">
-
+    <a href="recipes/enchiladas.html">Enchiladas Mole with Chicken</a>
+    <a href="recipes/friedrice.html">Egg Fried Rice</a>
 </body>
 </html>
