--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Mushroom & Herb Pizza</a>
+    <a href="/recipes/pizza.html">Mushroom & Herb Pizza</a>
     <a href="/recipes/index.html">Enchiladas Mole with Chicken</a>
     <a href="/recipes/friedrice.html">Egg Fried Rice</a>
     <p>test</p>
